--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -15,6 +15,7 @@
 }
 
 .wrapper h1 {
+  margin-bottom: 3rem;
   font-size: 2rem;
   font-weight: bold;
   color: #133839;
@@ -44,6 +45,8 @@
   color: #fff;
   cursor: pointer;
   background-color: #133839;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
 }
 
 .wrapper button:hover {
