--- a/assets/css/principal-productos-2.css
+++ b/assets/css/principal-productos-2.css
@@ -1,114 +1,113 @@
-.wrapper{
-    display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-	gap: 3rem;
-    margin: 2rem 2rem 0 6rem;
-    width: 1700px;
-
+.principal-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  gap: 3rem;
+  margin: 2rem 2rem 0 6rem;
+  width: 1700px;
 }
-.wrapper .card{
-    position: relative;
-    background-color: #fff;
-    border-radius: 3px;
-    width: 100%;
-    height: 70%;
-    overflow: hidden;
-    box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.15);
-}
-
-.wrapper .card img{
-    width: 100%;
-    border-radius: 3px;
-    transition: all 0.3s ease;
+.principal-cards .card {
+  position: relative;
+  background-color: #fff;
+  border-radius: 3px;
+  width: 100%;
+  height: 70%;
+  overflow: hidden;
+  box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.15);
 }
 
-.card:hover img{
-    transform: scale(1.1);
+.principal-cards .card img {
+  width: 100%;
+  border-radius: 3px;
+  transition: all 0.3s ease;
 }
 
-.wrapper .card .content{
-    position: absolute;
-    width: 100%;
-    bottom: -50%;
-    background: #fff;
-    padding: 10px 20px 22px 20px;
-    box-shadow: 0px -3px 10px 0px rgba(0,0,0,0.15);
-    transition: all 0.3s ease;
+.card:hover img {
+  transform: scale(1.1);
 }
 
-.wrapper .card:hover .content{
-    bottom: 0;
+.principal-cards .card .content {
+  position: absolute;
+  width: 100%;
+  bottom: -50%;
+  background: #fff;
+  padding: 10px 20px 22px 20px;
+  box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.15);
+  transition: all 0.3s ease;
+}
+
+.principal-cards .card:hover .content {
+  bottom: 0;
 }
 
 .card .content .row,
-.content .buttons{
+.content .buttons {
   display: flex;
   justify-content: space-between;
 }
 
-.content .row .details span{
-    font-size: 22px;
-    font-weight: 500;
+.content .row .details span {
+  font-size: 22px;
+  font-weight: 500;
 }
 
-.content .row .details p{
-    color: #333;
-    font-size: 17px;
-    font-weight: 400;
+.content .row .details p {
+  color: #333;
+  font-size: 17px;
+  font-weight: 400;
 }
 
-.content .row .price{
-    color: #133839;
-    font-size: 25px;
-    font-weight: 600;
+.content .row .price {
+  color: #133839;
+  font-size: 25px;
+  font-weight: 600;
 }
 
-.content .buttons{
-    margin-top: 20px;
+.content .buttons {
+  margin-top: 20px;
 }
 
-.content .buttons button{
-    width: 100%;
-    padding: 9px 0;
-    outline: none;
-    cursor: pointer;
-    font-size: 17px;
-    font-weight: 500;
-    border-radius: 3px;
-    border: 2px solid #133839;
-    text-transform: uppercase;
-    transition: all 0.3s ease;
+.content .buttons button {
+  width: 100%;
+  padding: 9px 0;
+  outline: none;
+  cursor: pointer;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 3px;
+  border: 2px solid #133839;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
 }
 
-.buttons button:first-child{
-    color: #133839;
-    margin-right: 10px;
-    background: #fff;
+.buttons button:first-child {
+  color: #133839;
+  margin-right: 10px;
+  background: #fff;
 }
 
-button:first-child:hover{
-    color: #fff;
-    background: #133839;
+button:first-child:hover {
+  color: #fff;
+  background: #133839;
 }
 
-.buttons button:last-child{
-    color: #fff;
-    margin-left: 10px;
-    background: #133839;
+.buttons button:last-child {
+  color: #fff;
+  margin-left: 10px;
+  background: #133839;
 }
 
-button:last-child:hover{
-    background: #133839;
-    border-color: #133839;
+button:last-child:hover {
+  background: #133839;
+  border-color: #133839;
 }
 
 @media (max-width: 768px) {
-    .wrapper{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: .5rem;
-        margin: 2rem 2rem 0 10rem;
-        width: 450px;
-        height: 1300px;
-    }
+  .principal-cards {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0.5rem;
+    margin: 2rem 2rem 0 10rem;
+    width: 450px;
+    height: 1300px;
+  }
 }
