--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -2,9 +2,9 @@
   height: 91vh;
 }
 
-.wrapper {
+.wrapper-register {
   width: 390px;
-  height: 450px;
+  height: 650px;
   padding: 2rem 1rem;
   margin-top: 120px;
   margin-left: 380px;
@@ -14,25 +14,47 @@
   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
 }
 
-.wrapper h1 {
+.wrapper-register h1 {
   margin-bottom: 3rem;
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
   color: #133839;
 }
 
-.wrapper form input {
+.wrapper-register form input {
   width: 100%;
   outline: none;
   border: 1px solid #fff;
   padding: 12px 20px;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
   border-radius: 20px;
   background: #e4e4e4;
   font-size: 16px;
 }
 
-.wrapper button {
+.wrapper-register label {
+  font-weight: 700;
+  color: #133839;
+  display: block;
+  margin-top: 0.2rem;
+  margin-bottom: 0.3rem;
+}
+
+.error-form {
+  color: red;
+  font-weight: 200;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.success-form {
+  color: green;
+  font-weight: 200;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.wrapper-register button {
   font-size: 1rem;
   font-weight: 600;
   margin-left: 1rem;
@@ -45,20 +67,18 @@
   color: #fff;
   cursor: pointer;
   background-color: #133839;
-  margin-top: 0.5rem;
+  margin-top: 3rem;
   margin-bottom: 1rem;
 }
 
-.wrapper button:hover {
+.wrapper-register button:hover {
   background-color: #cf5614;
 }
 
 .recover {
   text-align: right;
   font-size: 0.7rem;
-  margin-top: 0.5rem;
-  margin-right: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin: 0.3rem 1.4rem 0 0;
 }
 
 .recover a {
@@ -68,9 +88,9 @@
 }
 
 @media (max-width: 768px) {
-  .wrapper {
+  .wrapper-register {
     width: 390px;
-    height: 500px;
+    height: 650px;
     padding: 2rem 1rem;
     margin-top: 120px;
     margin-left: 155px;
