--- a/assets/css/products/allproducts.css
+++ b/assets/css/products/allproducts.css
@@ -1,4 +1,8 @@
 /* Basic table styles */
+.bg-listar {
+  min-height: 100vh;
+}
+
 .table-title {
   margin-top: 2rem;
   color: #133839;
@@ -117,5 +121,105 @@
   .table tbody td:nth-child(n + 2) {
     text-align: left;
     font-weight: normal;
+  }
+}
+
+/* Agregar/editar productos */
+.form-container {
+  width: 100%;
+}
+
+.form-title {
+  margin-top: 2rem;
+  color: #133839;
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+/* Estilos para los Grupos de Formularios */
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #555;
+}
+
+.form-group input,
+.form-group select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form-group input[type="file"] {
+  padding: 3px;
+}
+
+.img-preview {
+  display: block;
+  margin-top: 10px;
+  max-width: 100%;
+  height: auto;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+}
+
+/* Estilos para los Botones */
+.submit-button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.submit-button:hover {
+  background-color: #218838;
+}
+
+/* Estilos para los Mensajes de Error y Éxito */
+.alert {
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.alert-danger {
+  background-color: #f8d7da;
+  color: #721c24;
+}
+
+.alert-success {
+  background-color: #d4edda;
+  color: #155724;
+}
+
+/* responsive agregar y editar */
+@media (max-width: 768px) {
+  .form-title {
+    font-size: 20px;
+  }
+
+  .form-group input,
+  .form-group select {
+    padding: 8px;
+  }
+
+  .submit-button {
+    padding: 8px;
+    font-size: 14px;
   }
 }
