--- a/assets/css/principal-productos-2.css
+++ b/assets/css/principal-productos-2.css
@@ -1,44 +1,11 @@
 .principal-cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
-  gap: 3rem;
-  margin: 2rem 2rem 0 6rem;
-  width: 1700px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+  margin-bottom: 4rem;
 }
-.principal-cards .card {
-  position: relative;
-  background-color: #fff;
-  border-radius: 3px;
-  width: 100%;
-  height: 70%;
-  overflow: hidden;
-  box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.15);
-}
-
-.principal-cards .card img {
-  width: 100%;
-  border-radius: 3px;
-  transition: all 0.3s ease;
-}
-
-.card:hover img {
-  transform: scale(1.1);
-}
-
-.principal-cards .card .content {
-  position: absolute;
-  width: 100%;
-  bottom: -50%;
-  background: #fff;
-  padding: 10px 20px 22px 20px;
-  box-shadow: 0px -3px 10px 0px rgba(0, 0, 0, 0.15);
-  transition: all 0.3s ease;
-}
-
-.principal-cards .card:hover .content {
-  bottom: 0;
-}
-
 .card .content .row,
 .content .buttons {
   display: flex;
