--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -6,8 +6,8 @@
   width: 390px;
   height: 450px;
   padding: 2rem 1rem;
-  margin-top: 120px;
-  margin-left: 380px;
+  margin: 0 auto;
+  margin-top: 8rem;
   background-color: #fff;
   border-radius: 10px;
   text-align: center;
@@ -69,14 +69,74 @@
 
 @media (max-width: 768px) {
   .wrapper {
-    width: 390px;
+    width: 360px;
     height: 500px;
     padding: 2rem 1rem;
-    margin-top: 120px;
-    margin-left: 155px;
     background-color: #fff;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+  }
+}
+/* Profile */
+.perfil-main {
+  padding: 20px;
+  height: 65vh;
+  margin-top: 5rem;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
+}
+
+.avatar {
+  width: 100px;
+  height: auto;
+}
+
+.perfil-container {
+  max-width: 600px;
+  margin: 0 auto;
+  background-color: #f2f2f2;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+
+.perfil-title {
+  color: #133839;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.perfil-info {
+  margin-bottom: 20px;
+}
+
+.perfil-info-item {
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.perfil-logout {
+  display: block;
+  background-color: #133839;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.perfil-logout:hover {
+  background-color: #28a745;
+  color: #fff;
+  text-decoration: none;
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+  .perfil-container {
+    max-width: 90%;
   }
 }
