--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -6,8 +6,8 @@
   width: 390px;
   height: 650px;
   padding: 2rem 1rem;
-  margin-top: 120px;
-  margin-left: 380px;
+  margin: 0 auto;
+  margin-top: 8rem;
   background-color: #fff;
   border-radius: 10px;
   text-align: center;
