--- a/assets/css/principal-categories.css
+++ b/assets/css/principal-categories.css
@@ -1,151 +1,165 @@
-.container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+.container-features {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 3rem;
+  padding: 3rem 0;
 }
 
+.card-feature {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
 
-.container-features{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap: 3rem;
-    padding: 3rem 0;
-}
-
-.card-feature{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1.5rem;
-
-    background-color: #FFFCEB;
-    border-radius: 1rem;
-    padding: 1.5rem 0;
-    margin: 1rem;
+  background-color: #fffceb;
+  border-radius: 1rem;
+  padding: 1.5rem 0;
+  margin: 1rem;
 }
 
 .card-feature i {
-	font-size: 2.7rem;
-	color: #133839;
+  font-size: 2.7rem;
+  color: #133839;
 }
 
 .feature-content {
-	display: flex;
-    flex-direction: column;
-	gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .feature-content span {
-	font-weight: 700;
-	font-size: 1.5rem;
-	color: #133839;
+  font-weight: 700;
+  font-size: 1.5rem;
+  color: #133839;
 }
 
 .feature-content p {
-	color: #133839;
-    font-size: large;
-	font-weight: 700;
-    margin: 0px;
+  color: #133839;
+  font-size: large;
+  font-weight: 700;
+  margin: 0px;
 }
 
 /* categorias */
 
-.text-center{
-    text-align: center;
-    margin: 2rem;
-    font-size: 3rem;
-    color: #133839;
+.container-categorias {
+  display: flex;
+  gap: 4rem;
+  align-items: center;
+  justify-content: center;
 }
 
-.top-categories{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 2rem;
+.text-center {
+  text-align: center;
+  margin: 2rem;
+  font-size: 3rem;
+  color: #133839;
+}
+
+.top-categories {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
 }
 
 .card-category {
-	height: 20rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	border-radius: 2rem;
-	gap: 2rem;
+  padding: 5rem 5rem;
+  width: 30rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2rem;
+  gap: 2rem;
 }
 
 .category-cereales {
-	background-image: linear-gradient(#00000080, #00000080),
-		url('../img/cereales.jpg');
-	background-size: cover;
-	background-position: bottom;
-	background-repeat: no-repeat;
+  background-image: url("../img/cereales.jpg");
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
 }
 
 .category-frutos-secos {
-	background-image: linear-gradient(#00000080, #00000080),
-		url('../img/frutos_secos.png');
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+  background-image: url("../img/frutos_secos.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .category-suplementos {
-	background-image: linear-gradient(#00000080, #00000080),
-		url('../img/suplementos.jpg');
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+  background-image: url("../img/suplementos.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 .card-category p {
-	font-size: 2.5rem;
-	color: #fff;
-	text-transform: capitalize;
-	position: relative;
+  font-size: 2.5rem;
+  color: #fff;
+  text-transform: capitalize;
+  position: relative;
 }
 
 .card-category p::after {
-	content: '';
-	width: 2.5rem;
-	height: 2px;
-	background-color: #fff;
-	position: absolute;
-	bottom: -1rem;
-	left: 50%;
-	transform: translate(-50%, 50%);
+  content: "";
+  width: 2.5rem;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  bottom: -1rem;
+  left: 50%;
+  transform: translate(-50%, 50%);
 }
 
 .card-category span {
-	font-size: 1.6rem;
-	color: #fff;
-	cursor: pointer;
+  font-size: 1.6rem;
+  color: #ffffff;
+  cursor: pointer;
 }
 
-.card-category span:hover {
-	color: #fff;
-    text-decoration: underline;
+.category-cereales:hover {
+  background-image: linear-gradient(#00000080, #00000080),
+    url("../img/cereales.jpg");
+  transform: scale(1.1); /* Aumentar la escala al 110% */
+  transition: transform 0.3s ease-in; /* Animación suave */
+  font-weight: 500;
+}
+.category-frutos-secos:hover {
+  background-image: linear-gradient(#00000080, #00000080),
+    url("../img/frutos_secos.png");
+  transform: scale(1.1); /* Aumentar la escala al 110% */
+  transition: transform 0.3s ease-in; /* Animación suave */
+  font-weight: 500;
+}
+.category-suplementos:hover {
+  background-image: linear-gradient(#00000080, #00000080),
+    url("../img/suplementos.jpg");
+  transform: scale(1.1); /* Aumentar la escala al 110% */
+  transition: transform 0.3s ease-in; /* Animación suave */
+  font-weight: 500;
 }
 
 /* MediaQuerys */
 
-@media (max-width:768px) {
-    .container-features{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        gap: 1rem;
-        padding: 3rem 0;
-		margin: 0 auto;
-    }
-	.top-categories{
-		display: grid;
-        grid-template-columns: repeat(1,1fr);
-        gap: 1rem;
-        padding: 3rem 0;
-		margin-left: 6.5rem;
-	}
-	.categorias-texto{
-		margin-left: 6.5rem;
-	}
+@media (max-width: 768px) {
+  .container-features {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1rem;
+    margin: 0 auto;
+  }
+  .top-categories {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1rem;
+    padding: 3rem 0;
+    margin-left: 6.5rem;
+  }
+  .categorias-texto {
+    margin-left: 6.5rem;
+  }
 }
