--- a/assets/css/products/allproducts.css
+++ b/assets/css/products/allproducts.css
@@ -251,6 +251,7 @@
   border: none;
   border-radius: 4px;
   font-size: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .productContainer {
@@ -270,11 +271,16 @@
 
 .productCard {
   width: 300px;
-  margin: 10px;
+  margin: 0 auto;
   padding: 10px;
   border: 2px solid #155724;
   border-radius: 12px;
   text-align: center;
+}
+
+.productCard:hover {
+  transform: scale(1.1);
+  transition: 0.3s ease;
 }
 
 .productCard h3 {
@@ -480,6 +486,8 @@
   text-decoration: none;
   background-color: #cf5614;
   color: #fff;
+
+  transition: 0.3s ease-in;
 }
 /* Carrito responsive */
 /* Responsive adjustments for smaller screens */
@@ -713,4 +721,76 @@
   background-color: #218838;
   text-decoration: none;
   color: #fff;
+}
+
+/* Estilos para la paginación */
+.pagination-links nav {
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  overflow-x: auto; /* Agrega scroll horizontal en dispositivos pequeños */
+}
+
+.pagination {
+  list-style: none;
+  display: inline-flex;
+  padding: 0;
+}
+
+.page-item {
+  margin: 0 2px; /* Espaciado entre los elementos */
+}
+
+.page-item.disabled .page-link,
+.page-item.active .page-link {
+  background-color: transparent;
+  border-color: #133839;
+}
+
+.page-link {
+  position: relative;
+  display: block;
+  color: #133839;
+  padding: 0.5rem 0.75rem;
+  text-decoration: none;
+  border: 1px solid #dee2e6;
+  border-radius: 0.25rem;
+}
+
+.page-link:hover {
+  z-index: 2;
+  color: #133839;
+  background-color: #e9ecef;
+  border-color: #dee2e6;
+}
+
+.page-link:focus {
+  z-index: 3;
+  outline: none;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+/* Estilos adicionales para dispositivos móviles */
+@media screen and (max-width: 768px) {
+  .pagination-links {
+    margin-top: 10px; /* Ajusta el espacio superior */
+    align-items: center; /* Centra los elementos verticalmente */
+    overflow-x: auto; /* Agrega scroll horizontal en dispositivos pequeños */
+    white-space: nowrap; /* Evita que los elementos se envuelvan */
+  }
+  .pagination {
+    flex-wrap: nowrap; /* Evita que los elementos se envuelvan */
+  }
+  .page-item {
+    margin: 0 1px; /* Espaciado más pequeño entre los elementos */
+  }
+}
+
+.mensaje-agregado {
+  color: #28a745;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
 }
