--- a/assets/css/products/allproducts.css
+++ b/assets/css/products/allproducts.css
@@ -952,3 +952,15 @@
     padding: 8px;
   }
 }
+
+.container-baja {
+  background-color: #dee2e6;
+  width: 20rem;
+  height: 25rem;
+  margin: 0 auto;
+  margin-top: 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
