--- a/assets/css/principal-categories.css
+++ b/assets/css/principal-categories.css
@@ -153,13 +153,29 @@
     margin: 0 auto;
   }
   .top-categories {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 3rem 0;
-    margin-left: 6.5rem;
+    margin: 0 auto;
   }
   .categorias-texto {
     margin-left: 6.5rem;
+  }
+  .categorias-texto {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .card-category {
+    padding: 5rem 5rem;
+    width: 20rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2rem;
+    gap: 2rem;
   }
 }
