--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -89,11 +89,10 @@
 
 @media (max-width: 768px) {
   .wrapper-register {
-    width: 390px;
+    width: 360px;
     height: 650px;
     padding: 2rem 1rem;
-    margin-top: 120px;
-    margin-left: 155px;
+    margin: 0 auto;
     background-color: #fff;
     border-radius: 10px;
     text-align: center;
